# sketch-game

./: .gitignore  LICENSE  README.md  design.md
backend/: Cargo.toml
backend/src/: game.rs  handler.rs  main.rs  utils.rs  websocket.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/Components/: GameContainer.css  GameContainer.tsx  GameManager.tsx
frontend/src/Components/GameCanvas/: GameCanvas.tsx
frontend/src/Components/UI/: ChatDisplay.tsx  ChatHistory.tsx  ChatInput.tsx  GameChat.tsx  PlayerDisplay.tsx  PlayerList.tsx
frontend/src/constants/: enums.ts  types.ts
frontend/src/game/: gameManager.ts  player.ts
frontend/src/utils/: canvas.ts
