[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures = { version = "0.3.28", default-features = false}
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "sync", "rt-multi-thread"]}
tokio-stream = "0.1.12"
uuid = { version = "1.3.1", features = ["serde", "v4"]}
warp = "0.3.4"